welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: missing arguments for method isPresent in class island;
follow this method with `_' if you want to treat it as a partially applied function
  while(isPresent)
        ^island:14: error: type mismatch;
 found   : Boolean(true)
 required: Int
    	return true
               ^island:16: error: type mismatch;
 found   : Boolean(false)
 required: Int
  return false
         ^