welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var cpt = 0
  while(isPresent)
  {
     cpt = cpt+1
  }
  return cpt
}

def isPresent(nums:Array[Int] ,lookingFor:Int): Int = {
  for (i<- 0 to nums.length-1)
  {
    if (nums(i) == lookingFor)
    	return true
  }
  return false
}